--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,18 @@
-<h1>Welcome to Ruby Codin School Project</h1>
+<h1 class="text-center intro">Welcome to Ruby Codin School Project</h1>
+
+		<%= form_tag (''), :method => :get do %>
+		<div class="col-xs-12 col-md-6 col-md-offset-3 list-search">
+				<div class="input-group">
+					<%= text_field_tag :keyword, params[:keyword], placeholder: "Search for a list by name", class: "form-control", id: 'list-search' %>
+					<span class="input-group-btn"><%= submit_tag "Search", class: 'btn btn-default' %></span>
+			</div>
+		</div>
+
+		<% end %>
+		
+<div class="clearfix"></div>
+<br />
+<div class="col-xs-12 item-list">
 <% @list.each do |l| %>
 <div class="item  col-xs-4 col-lg-4">
 	<div class="thumbnail orange">
@@ -23,9 +37,9 @@
 	</div>
 </div>
 <% end %>
-
 </div>
-<div class="row text-center">
+
+<div class="col-xs-12 text-center">
   <hr />
   <div class="pull-right">
     <%= paginate @list %>
