add and remove favorite lists

--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -45,6 +45,9 @@
                         <li>
                           <%= link_to('My Lists', lists_path) %>
                         </li>
+                        <li>
+                       <%= link_to('Favorite Lists', favorite_lists_path ) %>
+                        </li>
 
                       <% end %>
                       <li>
