--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@ input#sku-search, input.btn.btn-default {
 
 .thumbnail.orange,
 select#list,
-.navbar.orange 
+.navbar.orange
 .orange {
 	border: 1px solid #f58a23 !important;
 }
@@ -62,9 +62,16 @@ ul.list-inline.lists{
 	color: #f58a23;
 }
 
+.whiteglyphicon{
+	color: #ffffff;
+}
+.lb-md {
+  font-size: 16px;
+}
+
 .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus{
   background-color: #f58a23;
-  border-color: #f58a23; 
+  border-color: #f58a23;
 }
 
 .pagination > li > a, .pagination > li > span,
