--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,8 +4,8 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="0.5"></th>
-      <th colspan="2"></th>
+      <th width"50"></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -15,15 +15,15 @@
         <td class="name"><%= list.name %>
           <td>
             <%if list.active %>
-              <span class="label label-success">Active</span>
+              <span class="label lb-md label-success">Active</span>
             <% else %>
-              <span class="label label-default">Inactive</span>
+              <span class="label label-default lb-md">Inactive</span>
             <% end %>
           </td>
         </td>
-        <td class="actions"><%= link_to 'Show List', list, class: 'btn btn-sm btn-primary' %></td>
-        <td class="actions"><%= link_to 'Edit List', edit_list_path(list), class: 'btn btn-sm btn-warning' %></td>
-        <td class="actions"><%= link_to 'Destroy List', list, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %></td>
+        <td class="actions"><%= link_to '', list, class: 'btn btn-lg btn-primary glyphicon whiteglyphicon glyphicon-list-alt' %></td>
+        <td class="actions"><%= link_to '', edit_list_path(list), class: 'btn btn-lg btn-warning glyphicon whiteglyphicon glyphicon-pencil' %></td>
+        <td class="actions"><%= link_to '', list, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-lg btn-danger glyphicon whiteglyphicon glyphicon-trash'%></td>
       </tr>
     <% end %>
   </tbody>
