do modifications after code review

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th width"50"></th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,17 +12,19 @@
   <tbody>
     <% @lists.each do |list| %>
       <tr>
-        <td class="names"><%= link_to list.name, list %>
+        <td class="names">
+          <%= link_to list.name, list %>
+        </td>
           <td>
             <%if list.active %>
-              <span class="label lb-md label-success">Active</span>
+              <span class="status label lb-md label-success">Active</span>
             <% else %>
-              <span class="label label-default lb-md">Inactive</span>
+              <span class="status label label-default lb-md">Inactive</span>
             <% end %>
           </td>
         </td>
-        <td class="actions"><%= link_to '', edit_list_path(list), class: 'btn btn-lg btn-warning glyphicon whiteglyphicon glyphicon-pencil' %></td>
-        <td class="actions"><%= link_to '', list, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-lg btn-danger glyphicon whiteglyphicon glyphicon-trash'%></td>
+        <td class="actions"><%= link_to '', edit_list_path(list), class: 'btn btn-md btn-warning glyphicon whiteglyphicon glyphicon-pencil' %></td>
+        <td class="actions"><%= link_to '', list, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-md btn-danger glyphicon whiteglyphicon glyphicon-trash'%></td>
       </tr>
     <% end %>
   </tbody>
