--- a/app/assets/javascripts/ratyrate.js.erb
+++ b/app/assets/javascripts/ratyrate.js.erb
@@ -3,7 +3,20 @@ $.fn.raty.defaults.halfShow = true;
 $.fn.raty.defaults.path = "/assets";
 $.fn.raty.defaults.cancel = false;
 
+
 $(function(){
+  init_stars();
+});
+
+$(document).on('turbolinks:render',function(){
+  
+  console.log('turbolinks:render'); 
+
+  init_stars();
+  
+});
+
+function init_stars(){
   $(".star").each(function() {
     var $readonly = ($(this).attr('data-readonly') == 'true');
     var $half     = ($(this).attr('data-enable-half') == 'true');
@@ -59,4 +72,4 @@ $(function(){
       }
     });
   });
-});
+}
