Add comments in About page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,20 +1,11 @@
 <h1>Welcome to Ruby Coding  School about page</h1>
-<div class="row">
-<ul class="list-unstyled">
-<li>
-Yiannis
-</li>
-<li>
-Ntinos
-</li>
-<li>
-Epistimi
-</li>
-<li>
-Basilis
-</li>
-<li>
-Thanos
-</li>
-</ul>
-</div>
+<h4>Version 0.1.1.<%= @REVISION %> beta. Take a look at
+<a href="https://github.com/konmavrakis/rubycodingschool" target="_blank" >Github!</a>
+</h4>
+<br>
+<h5>Ruby Coding School Project was created by Skroutz2 team:
+<a href="https://github.com/pikos-apikos" target="_blank" >Yiannis, </a>
+<a href="https://github.com/konmavrakis" target="_blank" >Ntinos, </a>
+<a href="https://github.com/epistimi4" target="_blank" >Epistimi, </a>
+<a href="https://github.com/" target="_blank" >Vasilis. </a>
+</h5>
