--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,7 @@
         <%= yield %>
 
       </div>
-      <footer class="footer">
-        <div class="text-center">
-          <hr>
-          <p>Ruby Coding School 2017</p>
-        </div>
-      </footer>
+      <%= render 'layouts/footer' %>
     </div>
 
   </body>
