Add jumbotron in about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,7 @@
-<h1>Welcome to Ruby Coding  School about page</h1>
+<div class="container">
+<div class="jumbotron">
+<h1>Ruby Coding  School About Page</h1>
+</div>
 <h4>Version 0.1.1.<%= @REVISION %> beta. Take a look at
 <a href="https://github.com/konmavrakis/rubycodingschool" target="_blank" >Github!</a>
 </h4>
@@ -9,3 +12,4 @@
 <a href="https://github.com/epistimi4" target="_blank" >Epistimi, </a>
 <a href="https://github.com/" target="_blank" >Vasilis. </a>
 </h5>
+</div>
