--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -23,9 +23,10 @@
               <% else %>
                 data-method="delete"  
                 data-href="/favorite_lists/<%=@favorite_list.id%>.json"
-                class="glyphicon glyphicon-heart heartlink" 
+                class="glyphicon glyphicon-heart heartlink"
               <% end %>
-              style="font-size: 20px"></a>
+              style="font-size: 20px"
+              data-toggle="tooltip" title="Add or remove this list from your Favorites!"></a>
     </li>
 
   </ul>
@@ -73,7 +74,6 @@
     <th>Quantity</th>
     <th>Total price</th>
     <th></th>
-    <th></th>
   </thead>
 
   <tbody>
@@ -82,20 +82,22 @@
         <td>
           <img src="<%= sku[:sku].images['main'] %>" class="img-responsive" style="max-height: 60px" alt="<%= sku[:sku].name %>">
         </td>
-        <td><%= sku[:sku].name %></td>
+        <td><%= link_to sku[:sku].name, products_preview_path(sku: sku[:sku].id) %></td>
         <td><%= sku[:sku].price_min %>€</td>
         <td><%= sku[:quantity] %></td>
         <td><%= number_with_precision(total_price(sku[:quantity], sku[:sku].price_min), precision: 2) %>€</td>
-        <td><%= link_to 'Show Product', products_preview_path(sku: sku[:sku].id), class: 'btn btn-sm btn-primary' %></td>
-        
         <% if @list.user_id == current_user.id %>
-          <td><%= link_to 'remove', product_list_path(sku_id: sku[:sku].id, list_id: @list.id), method: "delete", class: "btn btn-sm btn-primary" %>
+          <td class="status"><%= link_to '', product_list_path(sku_id: sku[:sku].id, list_id: @list.id), method: "delete", data: { confirm: 'Do you really want to delete this product from your list?' }, class: 'btn btn-md btn-danger glyphicon whiteglyphicon glyphicon glyphicon-trash' %>
         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<script>
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip(); 
+});
+</script>
 <div class="btn-group">
 <% if @list.user_id == current_user.id %>
   <%= link_to 'Edit List', edit_list_path(@list), class: 'btn btn-primary' %>
