--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -104,6 +104,9 @@
 
 $('#quantity').change(function(){
   if(this.value > 0 && this.value < 11){
+
+    $('.alert.alert-success').delay(1000).fadeOut('slow');
+    
     var sku_id = $(this).attr('data-skuid');
     var list_id = $(this).attr('data-listid');
     var quantity = this.value;
@@ -114,6 +117,7 @@ $('#quantity').change(function(){
       url: '/product_lists/update?' + 'list_id=' + list_id + '&sku_id=' + sku_id + '&quantity=' + quantity,
       success: function(r) {
         if (r.resp == 'ok') {
+          $('.alert.alert-success').css('display', 'none');
           $('#quantity-notice').css('display','block');
           $('#quantity-notice').html('Quantity of ' + r.name + ' changed to ' + r.quantity + '.')
           $('#quantity-notice').delay(1000).fadeOut('slow');
