--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+
 .input-group-btn input {
   color: white !important;
 	background: #e8760a !important;
@@ -92,9 +98,28 @@ color:#f58a23;
 }
 h1.intro {
 	font-size: 20px;
-	text-align: center;	
+	text-align: center;
 }
 
 input#list {
   border: 1px solid #f58a23;
 }
+
+.carousel-inner .item {
+  height:350px !important;
+}
+
+.carousel-inner .item > img {
+  padding-top: 50px;
+  max-height:300px !important;
+}
+
+#body {
+   padding:10px;
+}
+.row.main{
+  padding-bottom:100px;   /* Height of the footer */
+}
+.footer {
+   background: #fff;
+ }
