--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,6 +11,6 @@
 <a href="https://github.com/konmavrakis" target="_blank" >Ntinos, </a>
 <a href="https://github.com/epistimi4" target="_blank" >Epistimi, </a>
 <a href="https://github.com/TsiroJohn" target="_blank" >Thanos, </a>
-<a href="https://github.com/" target="_blank" >Vasilis. </a>
+<a href="https://github.com/vsiopis" target="_blank" >Vasilis. </a>
 </h5>
 </div>
