--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -41,9 +41,7 @@
     <% end %>
   </tbody>
 </table>
-
-</div>
-<div class="row text-center">
+<div class="col-xs-12">
   <hr />
   <div class="pull-right">
     <%= paginate @lists %>
