--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,6 +2,8 @@
 <div class="jumbotron">
 <h1>Ruby Coding  School About Page</h1>
 </div>
+
+
 <h4>Version 0.1.1.<%= @REVISION %> beta. Take a look at
 <a href="https://github.com/konmavrakis/rubycodingschool" target="_blank" >Github!</a>
 </h4>
@@ -13,4 +15,10 @@
 <a href="https://github.com/TsiroJohn" target="_blank" >Thanos, </a>
 <a href="https://github.com/vsiopis" target="_blank" >Vasilis. </a>
 </h5>
+<br />
+<br />
+<div class="text-center">
+    <img src="/assets/team.jpg" class="center-block img-responsive" />
+</div>
+
 </div>
