--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@ body {
    margin:0;
    padding:0;
    height:100%;
+   background: url(/assets/summer-bg.jpg) no-repeat;
+   background-size: cover;
 }
 
 .input-group-btn input {
@@ -114,12 +116,28 @@ input#list {
   max-height:300px !important;
 }
 
+.carousel-control.right, .carousel-control.left {
+  background: none;
+}
+.carousel-indicators li {
+  border: 1px solid #e8760a;
+}
+.carousel-indicators li.active {
+  background: #e8760a;
+}
 #body {
    padding:10px;
 }
 .row.main{
-  padding-bottom:100px;   /* Height of the footer */
+  
+  padding: 10px 15px 100px 15px;
+  background: rgba(255,255,255 , 0.85);
+  border-radius: 5px;
 }
 .footer {
-   background: #fff;
+  border-top: 1px solid #e8760a;
+  background: #fff;
+ }
+ .footer a {
+   color: #000;
  }
