--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -6,7 +6,7 @@
   <% if user_signed_in? %>
 
     <li>
-      <%= link_to('Edit registration', edit_user_registration_path, { :class => 'btn' } ) %>
+      <%= link_to('Edit registration', edit_user_registration_path, { :class => 'btn btn-default' } ) %>
     </li>
     <li>
       <%= link_to('Logout', destroy_user_session_path, { :class => 'btn btn-default' , :method => :delete }) %>
