--- a/app/views/products/preview.html.erb
+++ b/app/views/products/preview.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-10 col-md-10 col-lg-10 col-md-offset-2">
-  <div class="col-sm-8 col-md-8 col-lg-8">
+  <div class="col-sm-9">
     <div class="thumbnail orange">
       <div>
       	<%= render 'skroutz_carousel' , locals: { account: @sku }%>
