Yes we did it!!!

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <div class="jumbotron">
-<h1>Ruby Coding  School About Page</h1>
+<h1>Ruby Coding School <small>About Page</small></h1>
 </div>
 
 
